tests/NormalTests/paczka1/small_fuzzy/74973016.err
Error in line 3: xl0Qsmde A922 32,4
Error in line 6: xl0Qsmde A400 56,2
